Avoid page breaks inside, but not always page break

--- a/resources/sass/calendar/print.scss
+++ b/resources/sass/calendar/print.scss
@@ -37,7 +37,6 @@
     .timespan_container {
         display:block !important;
         position: relative !important;
-        page-break-after: always !important;
         page-break-inside: avoid !important;
         border:1px rgba(0,0,0,0.1) solid !important;
         box-shadow: none !important;
